--- a/src/App.module.css
+++ b/src/App.module.css
@@ -24,7 +24,7 @@
   position: relative;
 }
 
-.container {
+/* .container {
   font-size: 20px;
 }
 
@@ -54,7 +54,7 @@
   font-size: 18px;
   font-weight: 600;
   color: white;
-}
+} */
 
 .footer {
   width: 1280px;
