[🔧코드수정] Result 페이지 컴포넌트 코드 수정
- Result 컴포넌트 데이터 바인딩
- Result 컴포넌트 progress 바 점수 기준점 설정

--- a/src/pages/Result/Result.module.css
+++ b/src/pages/Result/Result.module.css
@@ -88,6 +88,12 @@
   position: absolute;
 }
 
+.point {
+  font-weight: 600;
+  position: relative;
+  left: -5px; /*-155px이 0, -5가 50 145px 100*/
+}
+
 .green {
   background-color: #7EBE6D;
 }
