--- a/src/pages/Result/Result.module.css
+++ b/src/pages/Result/Result.module.css
@@ -36,7 +36,7 @@
 .inner-left {
   width: 450px;
   margin-left: 30px;
-  border: 1px solid #9ECE91;
+  border: 1px solid #9ece91;
   border-radius: 48px;
   background-color: #fff;
 }
@@ -49,7 +49,7 @@
   justify-content: center;
   align-items: center;
   padding: 30px;
-  border-bottom: 1px solid #9ECE91;
+  border-bottom: 1px solid #9ece91;
 }
 
 .score:last-child {
@@ -75,7 +75,7 @@
 .progress {
   width: 300px;
   height: 10px;
-  background-color: #EBEBEB;
+  background-color: #ebebeb;
   border-radius: 10px;
   position: relative;
 }
@@ -95,15 +95,15 @@
 }
 
 .green {
-  background-color: #7EBE6D;
+  background-color: #7ebe6d;
 }
 
 .blue {
-  background-color: #A8B1FF;
+  background-color: #a8b1ff;
 }
 
 .red {
-  background-color: #EF979D;
+  background-color: #ef979d;
 }
 
 .inner-right {
@@ -115,10 +115,17 @@
   position: relative;
 }
 
-.desc1, .desc2 {
+.desc1,
+.desc2 {
   font-size: 20px;
   font-weight: 500;
   margin-bottom: 40px;
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
 }
 
 .button {
@@ -129,8 +136,10 @@
   font-size: 18px;
   font-weight: 600;
   color: #fff;
-  background-color: #4C9E6A;
-  position: absolute;
-  bottom: -50%;
-  transform: translateY(-70%);
+  background-color: #4c9e6a;
+}
+
+.button a {
+  text-decoration: none;
+  color: white;
 }
