--- a/src/pages/Result/Result.module.css
+++ b/src/pages/Result/Result.module.css
@@ -140,6 +140,10 @@
 }
 
 .button a {
+  width: 100%;
+  height: 100%;
+  line-height: 60px;
+  display: inline-block;
   text-decoration: none;
   color: white;
 }
